# CoreWebServer/src/au/gov/asd/tac/constellation/webserver/services/GetTypeDescription.java
@@ -41,6 +41,7 @@ public class GetTypeDescription extends RestService {
 
     private static final String NAME = "get_type_description";
     private static final String TYPE_PARAMETER_ID = "type_name";
+    private static final String EXAMPLE_RESPONSES_PATH = "getTypeDescriptionExample";
 
     @Override
     public String getName() {
@@ -131,5 +132,10 @@ public class GetTypeDescription extends RestService {
         } else {
             throw new IllegalArgumentException(String.format("The type '%s' is unknown.", typeName));
         }
+    }
+    
+    @Override
+    public String getExampleResponsesPath() {
+        return EXAMPLE_RESPONSES_PATH;
     }
 }
